--- a/client/style.css
+++ b/client/style.css
@@ -8,13 +8,13 @@
 }
 
 body {
-  background-image: url(assets/J.A.R.V.I.S._\(MCU\).png);
+  background-image: url(assets/jarvis.png);
 }
 
 #app {
   width: 100vw;
   height: 100vh;
-  background-image: url(assets/J.A.R.V.I.S._\(MCU\).png);
+  background-image: url(assets/jarvis.png);
 
   display: flex;
   flex-direction: column;
